fix: add BREVO_API_KEY support and port 2525 alternative for cloud delivery